# heidsoft-cpp

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
boost_01/: boost01.cpp  list_dir
cmake_01/: CMakeCache.txt  main.cc
cmake_02/: CMakeCache.txt  CMakeLists.txt  Makefile  Sales_item.cpp  Sales_item.h  cmake_install.cmake  main.cc
cmake_03/: main.cpp
cmake_04/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
cmake_05/: CMakeCache.txt  Makefile  cmake_install.cmake  main.c
cmake_06/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
cmake_07/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
cmake_07/add/: CMakeLists.txt  Makefile  add.cpp  cmake_install.cmake  libadd.dylib
cmake_08/: CMakeCache.txt  Makefile  cmake_install.cmake  main.c
cmake_09/: CMakeCache.txt  Makefile  cmake_install.cmake  main.c
cmake_10/: CMakeCache.txt  Makefile  cmake_install.cmake  main.c
cmake_11/: a.out  log.c  log.h  main.c
cmake_12/: bill.c  call_lib_main.c  call_lib_main_by_lib_name  fred.c  lib.h  readme
cmake_13/: a.out  main.c  readme
cmake_14/: a.out  main.c
cmake_15/: a.out  main.c  main1.c  main2.c  main3.c  readme
cmake_16/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  main.cpp  main1.cpp  readme
cmake_17/: a.out  main1.cpp  readme
cmake_18/: a.out  main.cpp  readme
cmake_19/: a.out  main.c  main1.c  main2.c  readme
cmake_20/: a.out  client  client1.c  main.c  main1.c  readme  readme.md  server1.c
cmake_21/: a.out  broadcaster.c  client  getip  (+10 more)
(+12 files in other folders)
